--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,6 +51,11 @@ dnspython==2.4.2
 # DNS Provider Support
 cloudflare==2.11.1
 
+# Notification and Alert Support
+Jinja2==3.1.2
+aiohttp==3.9.1
+schedule==1.2.0
+
 # Template Engine
 jinja2==3.1.2
 
