--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -21,6 +21,8 @@ volumes:
     driver: local
   nginx_logs:
     driver: local
+  nginx_proxy_logs:
+    driver: local
 
 services:
   # PostgreSQL数据库 - 使用阿里云镜像
@@ -129,9 +131,10 @@ services:
     volumes:
       - ssl_certs:/app/certs
       - app_logs:/app/logs
-    ports:
-      - "${BACKEND_PORT:-8000}:8000"
-      - "${METRICS_PORT:-9090}:9090"
+    # 移除端口映射，通过反向代理访问
+    # ports:
+    #   - "${BACKEND_PORT:-8000}:8000"
+    #   - "${METRICS_PORT:-9090}:9090"
     networks:
       ssl-manager-network:
         ipv4_address: 172.20.0.20
@@ -174,8 +177,9 @@ services:
     restart: unless-stopped
     volumes:
       - nginx_logs:/var/log/nginx
-    ports:
-      - "${FRONTEND_PORT:-80}:80"
+    # 移除端口映射，通过反向代理访问
+    # ports:
+    #   - "${FRONTEND_PORT:-80}:80"
     networks:
       ssl-manager-network:
         ipv4_address: 172.20.0.30
@@ -187,6 +191,46 @@ services:
       timeout: 3s
       retries: 3
       start_period: 5s
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: '0.25'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  # Nginx反向代理服务
+  nginx-proxy:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile.proxy
+    image: ssl-manager-nginx-proxy:latest
+    container_name: ssl-manager-nginx-proxy
+    restart: unless-stopped
+    environment:
+      DOMAIN_NAME: ${DOMAIN_NAME:-ssl.gzyggl.com}
+    volumes:
+      - nginx_proxy_logs:/var/log/nginx
+      - ssl_certs:/etc/nginx/ssl
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      ssl-manager-network:
+        ipv4_address: 172.20.0.40
+    depends_on:
+      - frontend
+      - backend
+      - grafana
+    healthcheck:
+      test: ["CMD", "/usr/local/bin/health-check.sh"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
     deploy:
       resources:
         limits:
@@ -235,12 +279,16 @@ services:
       GF_SECURITY_ADMIN_USER: ${GRAFANA_USER:-admin}
       GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD:-admin}
       GF_USERS_ALLOW_SIGN_UP: false
+      # 配置子路径访问
+      GF_SERVER_ROOT_URL: "%(protocol)s://%(domain)s:%(http_port)s/monitoring/"
+      GF_SERVER_SERVE_FROM_SUB_PATH: "true"
     volumes:
       - grafana_data:/var/lib/grafana
       - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards:ro
       - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources:ro
-    ports:
-      - "${GRAFANA_PORT:-3000}:3000"
+    # 移除端口映射，通过反向代理访问
+    # ports:
+    #   - "${GRAFANA_PORT:-3000}:3000"
     networks:
       ssl-manager-network:
         ipv4_address: 172.20.0.51
