--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -125,16 +125,22 @@ http {
     limit_conn_zone $server_name zone=perserver:10m;
 
     # 上游服务器配置
-    upstream backend_servers {
+    upstream frontend_servers {
         least_conn;
-        server frontend:80 max_fails=3 fail_timeout=30s;
+        server ssl-manager-frontend:80 max_fails=3 fail_timeout=30s;
         keepalive 32;
     }
 
     upstream api_servers {
         least_conn;
-        server backend:8000 max_fails=3 fail_timeout=30s;
+        server ssl-manager-backend:8000 max_fails=3 fail_timeout=30s;
         keepalive 32;
+    }
+
+    upstream monitoring_servers {
+        least_conn;
+        server ssl-manager-grafana:3000 max_fails=3 fail_timeout=30s;
+        keepalive 16;
     }
 
     # 缓存配置
