--- a/nginx/Dockerfile.proxy.aliyun
+++ b/nginx/Dockerfile.proxy.aliyun
@@ -1,11 +1,25 @@
-# Nginx反向代理Dockerfile
-# 使用官方Docker Hub镜像作为主要选择，Aliyun镜像作为备选
-FROM nginx:1.24-alpine
+# Nginx反向代理Dockerfile - 阿里云优化版
+# 多个基础镜像选项，按优先级排序
+
+# 选项1: 阿里云公共镜像仓库 (推荐)
+FROM registry.cn-hangzhou.aliyuncs.com/acs/nginx:1.24-alpine
+
+# 如果上面失败，可以尝试以下备选方案：
+# 选项2: 官方Docker Hub镜像
+# FROM nginx:1.24-alpine
+
+# 选项3: 阿里云镜像加速
+# FROM dockerproxy.com/library/nginx:1.24-alpine
+
+# 选项4: 中科大镜像
+# FROM docker.mirrors.ustc.edu.cn/library/nginx:1.24-alpine
 
 # 安装必要工具
 RUN apk add --no-cache \
     curl \
+    wget \
     tzdata \
+    openssl \
     && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
     && echo "Asia/Shanghai" > /etc/timezone \
     && apk del tzdata
@@ -31,7 +45,13 @@ RUN mkdir -p /var/cache/nginx/client_temp \
 # 复制nginx配置
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY conf.d/ /etc/nginx/conf.d/
-COPY ssl/ /etc/nginx/ssl/
+
+# 创建SSL目录和默认证书
+RUN mkdir -p /etc/nginx/ssl && \
+    openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/nginx/ssl/default.key \
+    -out /etc/nginx/ssl/default.crt \
+    -subj "/C=CN/ST=Default/L=Default/O=Default/CN=default"
 
 # 创建健康检查脚本
 RUN echo '#!/bin/sh' > /usr/local/bin/health-check.sh && \
@@ -42,8 +62,16 @@ RUN echo '#!/bin/sh' > /usr/local/bin/health-check.sh && \
 RUN echo '#!/bin/sh' > /usr/local/bin/start-nginx.sh && \
     echo 'set -e' >> /usr/local/bin/start-nginx.sh && \
     echo '' >> /usr/local/bin/start-nginx.sh && \
+    echo '# 检查配置文件' >> /usr/local/bin/start-nginx.sh && \
+    echo 'if [ ! -f /etc/nginx/conf.d/ssl-manager.conf ]; then' >> /usr/local/bin/start-nginx.sh && \
+    echo '  echo "Warning: ssl-manager.conf not found, using default"' >> /usr/local/bin/start-nginx.sh && \
+    echo '  echo "server { listen 80; location / { return 200 \"Nginx Proxy Ready\"; } }" > /etc/nginx/conf.d/default.conf' >> /usr/local/bin/start-nginx.sh && \
+    echo 'fi' >> /usr/local/bin/start-nginx.sh && \
+    echo '' >> /usr/local/bin/start-nginx.sh && \
     echo '# 替换环境变量' >> /usr/local/bin/start-nginx.sh && \
-    echo 'envsubst '"'"'$DOMAIN_NAME'"'"' < /etc/nginx/conf.d/ssl-manager.conf.template > /etc/nginx/conf.d/ssl-manager.conf' >> /usr/local/bin/start-nginx.sh && \
+    echo 'if [ -f /etc/nginx/conf.d/ssl-manager.conf.template ]; then' >> /usr/local/bin/start-nginx.sh && \
+    echo '  envsubst '"'"'$DOMAIN_NAME'"'"' < /etc/nginx/conf.d/ssl-manager.conf.template > /etc/nginx/conf.d/ssl-manager.conf' >> /usr/local/bin/start-nginx.sh && \
+    echo 'fi' >> /usr/local/bin/start-nginx.sh && \
     echo '' >> /usr/local/bin/start-nginx.sh && \
     echo '# 测试nginx配置' >> /usr/local/bin/start-nginx.sh && \
     echo 'nginx -t' >> /usr/local/bin/start-nginx.sh && \
@@ -68,4 +96,5 @@ CMD ["/usr/local/bin/start-nginx.sh"]
 # 标签信息
 LABEL maintainer="SSL Certificate Manager Team" \
       version="1.0.0" \
-      description="SSL Certificate Manager Nginx Reverse Proxy"
+      description="SSL Certificate Manager Nginx Reverse Proxy (Aliyun Optimized)" \
+      org.opencontainers.image.source="https://github.com/lijh1983/ssl_cert_manager_delivery"
