docs: 完成项目文档整理和配置优化
📚 文档更新和整理:
- 更新docs/NGINX_PROXY_SETUP.md，添加Docker镜像问题解决方案
- 新增Docker镜像拉取失败的详细故障排除指南
- 整合重复的配置示例和故障排除章节
- 优化文档结构，提高可读性和实用性

🗂️ 新增项目结构文档:
- 新增docs/PROJECT_STRUCTURE.md项目结构说明文档
- 详细说明各目录和文件的作用和组织方式
- 提供文件命名规范和维护建议
- 包含完整的目录树结构和使用说明

🐳 Docker配置优化:
- 优化docker-compose.aliyun.yml中nginx-proxy服务配置
- 添加构建缓存和镜像回退机制
- 改进服务依赖关系和健康检查配置
- 移除重复的数据卷定义，简化配置结构

🧹 项目整洁性维护:
- 新增.gitignore文件，完整覆盖各类临时文件
- 统一所有脚本文件的执行权限
- 规范文件命名和目录结构
- 清理重复和冗余的配置项

🔧 配置文件标准化:
- 统一使用中文注释和说明
- 标准化环境变量和配置参数
- 优化服务间的网络配置和资源限制
- 改进错误处理和日志配置

✨ 维护性改进:
- 建立清晰的文档层次结构
- 提供完整的故障排除工具链
- 统一代码风格和注释规范
- 确保项目的可维护性和扩展性

现在项目结构更加清晰，文档更加完善，
为用户提供了完整的部署和维护指南。

--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -207,14 +207,21 @@ services:
     build:
       context: ./nginx
       dockerfile: Dockerfile.proxy
+      args:
+        - BUILDKIT_INLINE_CACHE=1
+      cache_from:
+        - nginx:alpine
+        - nginx:1.24-alpine
     image: ssl-manager-nginx-proxy:latest
     container_name: ssl-manager-nginx-proxy
     restart: unless-stopped
     environment:
       DOMAIN_NAME: ${DOMAIN_NAME:-ssl.gzyggl.com}
+      TZ: Asia/Shanghai
     volumes:
       - nginx_proxy_logs:/var/log/nginx
       - ssl_certs:/etc/nginx/ssl
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
     ports:
       - "80:80"
       - "443:443"
@@ -222,9 +229,10 @@ services:
       ssl-manager-network:
         ipv4_address: 172.20.0.40
     depends_on:
-      - frontend
-      - backend
-      - grafana
+      frontend:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "/usr/local/bin/health-check.sh"]
       interval: 30s
@@ -236,6 +244,9 @@ services:
         limits:
           memory: 256M
           cpus: '0.25'
+        reservations:
+          memory: 128M
+          cpus: '0.1'
     logging:
       driver: "json-file"
       options:
@@ -302,8 +313,6 @@ services:
     profiles:
       - monitoring
 
-# 额外的数据卷用于监控
-volumes:
   prometheus_data:
     driver: local
   grafana_data:
