fix: 修复阿里云ECS环境下Python镜像拉取问题
🔧 Python镜像拉取问题修复:
- 修复backend/Dockerfile.aliyun中错误的阿里云镜像路径
- 将registry.cn-hangzhou.aliyuncs.com/library/python改为python:3.10-slim
- 解决'pull access denied'和'authorization failed'错误
- 配合阿里云Docker镜像加速器实现快速拉取

🆕 多镜像源备选方案:
- 新增backend/Dockerfile.aliyun.multi多源镜像Dockerfile
- 支持官方镜像、阿里云ACS、中科大镜像、Docker代理自动切换
- 实现镜像拉取失败时的自动故障转移机制
- 优化构建缓存和依赖安装流程

🛠️ 智能修复工具链:
- 新增scripts/fix_python_image_issue.sh Python镜像专项修复脚本
- 新增scripts/smart_build_backend.sh智能后端镜像构建脚本
- 新增scripts/verify_and_fix_images.sh综合验证和修复工具
- 支持自动检测、修复、验证的完整工作流

⚡ Docker配置优化:
- 更新docker-compose.aliyun.yml中的cache_from配置
- 移除错误的阿里云镜像路径引用
- 添加多版本Python镜像缓存支持
- 优化构建参数和依赖关系

🎯 解决的具体问题:
- 修复'repository does not exist or may require authorization'错误
- 解决'insufficient_scope: authorization failed'认证问题
- 确保在阿里云ECS环境下能够稳定拉取Python基础镜像
- 提供多种镜像源的备选方案和自动切换机制

📋 验证和测试:
- 提供完整的镜像拉取测试工具
- 支持网络连接检查和镜像可用性验证
- 包含自动修复和详细报告生成功能
- 确保修复后的配置能够正常构建和运行

现在用户可以在阿里云ECS环境下成功构建和部署
SSL证书自动化管理系统，实现统一域名访问目标。

--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -100,7 +100,9 @@ services:
       args:
         - BUILDKIT_INLINE_CACHE=1
       cache_from:
-        - registry.cn-hangzhou.aliyuncs.com/library/python:3.10-slim
+        - python:3.10-slim
+        - python:3.11-slim
+        - ssl-manager-backend:latest
     image: ssl-manager-backend:aliyun
     container_name: ssl-manager-backend
     restart: unless-stopped
