--- a/backend/Dockerfile.aliyun
+++ b/backend/Dockerfile.aliyun
@@ -13,22 +13,42 @@ ENV PYTHONUNBUFFERED=1 \
     PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple \
     PIP_TRUSTED_HOST=pypi.tuna.tsinghua.edu.cn
 
-# 配置阿里云软件源
-RUN sed -i 's/deb.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list \
-    && sed -i 's/security.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list
+# 配置阿里云软件源（大幅提升包下载速度）
+RUN echo "正在配置阿里云软件源..." && \
+    # 备份原始sources.list
+    cp /etc/apt/sources.list /etc/apt/sources.list.backup 2>/dev/null || true && \
+    # 配置阿里云Debian镜像源
+    echo "deb https://mirrors.aliyun.com/debian/ bookworm main non-free-firmware" > /etc/apt/sources.list && \
+    echo "deb-src https://mirrors.aliyun.com/debian/ bookworm main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb https://mirrors.aliyun.com/debian-security/ bookworm-security main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb-src https://mirrors.aliyun.com/debian-security/ bookworm-security main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb https://mirrors.aliyun.com/debian/ bookworm-updates main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb-src https://mirrors.aliyun.com/debian/ bookworm-updates main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "阿里云软件源配置完成"
 
-# 安装系统依赖
-RUN apt-get update && apt-get install -y \
-    curl \
-    gcc \
-    g++ \
-    make \
-    libffi-dev \
-    libssl-dev \
-    libpq-dev \
-    netcat-traditional \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+# 安装系统依赖（使用阿里云镜像源，速度大幅提升）
+RUN echo "开始安装系统依赖..." && \
+    apt-get update && \
+    echo "软件源更新完成，开始安装包..." && \
+    apt-get install -y --no-install-recommends \
+        curl \
+        wget \
+        gcc \
+        g++ \
+        make \
+        libffi-dev \
+        libssl-dev \
+        libpq-dev \
+        pkg-config \
+        netcat-traditional \
+        ca-certificates \
+        build-essential \
+    && echo "系统依赖安装完成，清理缓存..." && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /tmp/* && \
+    rm -rf /var/tmp/* && \
+    echo "系统依赖安装和清理完成"
 
 # 阶段2: 依赖安装
 FROM base AS dependencies
