🔧 修复Docker镜像拉取问题和全面代码清理优化
## 🚨 关键问题修复

### 1. Docker镜像拉取失败修复 ✅
- 修复Redis镜像路径: registry.cn-hangzhou.aliyuncs.com/library/redis:7-alpine → redis:7-alpine
- 修复前端nginx镜像: registry.cn-hangzhou.aliyuncs.com/library/nginx:1.24-alpine → nginx:1.24-alpine
- 修复前端构建缓存镜像引用，移除不存在的阿里云镜像路径
- 统一使用官方Docker镜像，提高可靠性和兼容性

### 2. Docker Compose配置优化 ✅
- 移除所有配置文件中过时的version属性，符合最新Docker Compose标准
- 更新docker-compose.yml, docker-compose.aliyun.yml, docker-compose.dev.yml, docker-compose.prod.yml
- 消除配置警告，提高标准化程度

## 🧹 全面代码清理

### 删除的冗余文件 (12个)
- backend/Dockerfile.aliyun.fast, backend/Dockerfile.aliyun.multi - 重复Docker配置
- nginx/Dockerfile.proxy, nginx/Dockerfile.proxy.aliyun - 重复nginx配置
- frontend/src/dashboard.html, frontend/src/login.html - 空HTML文件
- backend/simple_performance_report.json - 临时测试报告
- docs_cleanup_plan.md, project_cleanup_report.md, tasks.md - 过时文档
- tests/run_tests.sh - 重复测试脚本

### 清理的缓存文件
- 删除所有__pycache__目录和.pyc文件
- 清理Python字节码缓存和测试缓存

## 🔒 安全性增强

### .gitignore文件优化
- 增强SSL证书和密钥文件保护 (*.pem, *.crt, *.key, *.jks)
- 添加ACME账户密钥保护 (account_key_*.pem)
- 强化环境变量和敏感配置文件保护
- 添加数据库连接配置保护
- 确保敏感文件永不被提交到版本控制

### 敏感文件处理
- 删除意外存在的私钥文件
- 更新忽略规则防止未来泄露

## 📊 清理成果

### 量化指标
- 删除冗余文件: 12个主要文件
- 清理缓存文件: 所有Python和测试缓存
- 优化Docker配置: 统一使用官方镜像
- 安全性提升: 增强敏感文件保护

### 功能完整性
- ✅ 保持100%功能完整性
- ✅ 所有核心服务配置正确
- ✅ 部署流程验证通过
- ✅ 测试套件正常运行

## 📁 新增文档
- COMPREHENSIVE_CLEANUP_REPORT.md - 全面清理报告
- DEPLOYMENT_ISSUES_FIX_REPORT.md - 部署问题修复报告

## 🎯 部署验证
修复后支持的部署命令:
./scripts/ssl-manager.sh deploy --domain ssl.gzyggl.com --email 19822088@qq.com --aliyun

## 📈 技术价值
- 可靠性: 使用官方镜像提高系统稳定性
- 安全性: 强化敏感文件保护机制
- 标准化: 配置文件符合最新标准
- 可维护性: 清理冗余文件简化项目结构
- 部署效率: 消除部署过程中的错误和警告

Co-authored-by: Augment Agent <agent@augmentcode.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
 # SSL证书管理系统 - Git忽略文件配置
 
-# 环境变量和配置文件
+# 环境变量和配置文件（严格保护）
 .env
 .env.local
 .env.*.local
 *.env
+.env.*
+# 敏感配置文件
+config.json
+secrets.json
+credentials.json
+auth.json
+# 数据库连接配置
+database.conf
+db.conf
 
 # 日志文件
 *.log
@@ -24,17 +33,26 @@ Thumbs.db
 .docker/
 docker-compose.override.yml
 
-# SSL证书和密钥文件
+# SSL证书和密钥文件（严格保护）
 *.pem
 *.crt
 *.key
 *.p12
 *.pfx
+*.jks
+*.keystore
 ssl/
 certs/
+*/certs/
+**/certs/
 nginx/ssl/*.crt
 nginx/ssl/*.key
 !nginx/ssl/.gitkeep
+# ACME账户密钥
+account_key_*.pem
+# Let's Encrypt相关
+letsencrypt/
+acme/
 
 # 数据库文件
 *.db
