--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -95,7 +95,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile.aliyun.fast
+      dockerfile: Dockerfile
       args:
         - BUILDKIT_INLINE_CACHE=1
       cache_from:
@@ -169,7 +169,7 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.aliyun
+      dockerfile: Dockerfile
       args:
         - NODE_ENV=production
         - VITE_API_BASE_URL=${VITE_API_BASE_URL:-/api}
