--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,8 @@
     "prettier": "^3.0.0",
     "vitest": "^0.34.1",
     "@vue/test-utils": "^2.4.1",
-    "jsdom": "^22.1.0"
+    "jsdom": "^22.1.0",
+    "terser": "^5.19.2"
   },
   "engines": {
     "node": ">=16.0.0",
