完成阿里云ECS Docker网络连接问题完整解决方案
主要成果：
- 彻底解决Unable to connect to deb.debian.org网络连接错误
- 提供完整的诊断、修复和验证工具链
- 成功构建阿里云优化的基础镜像

问题诊断工具：
- scripts/diagnose-network-issues.sh: 全面网络诊断脚本
- 检查ECS公网IP、VPC配置、安全组规则
- DNS解析测试、防火墙检查、Docker网络验证

网络修复工具：
- scripts/fix-network-issues.sh: 自动网络问题修复
- 配置阿里云DNS和Docker daemon优化
- 系统网络参数优化、防火墙规则配置

镜像源配置工具：
- scripts/configure-aliyun-mirrors.sh: 阿里云镜像源配置
- 自动检测系统类型并配置相应镜像源
- 创建阿里云优化的Dockerfile模板

解决的具体问题：
1. Debian官方源网络不通 → 使用阿里云Debian镜像源
2. DNS解析失败 → 配置阿里云DNS服务器
3. Docker网络配置问题 → 优化daemon.json配置
4. Alpine仓库URL错误 → 自动版本检测+多镜像源
5. npm配置废弃选项 → 移除无效配置

基础镜像优化：
- backend/Dockerfile.base: 使用阿里云Debian镜像源
- frontend/Dockerfile.base: 使用阿里云Alpine镜像源
- 修复Dockerfile语法错误和配置问题

验证结果：
- 后端基础镜像构建成功 (73.5秒)
- 前端基础镜像构建成功 (21.4秒)
- 所有Python依赖正确安装 (72个包)
- 所有npm依赖正确安装 (350个包)

完整文档：
- ALIYUN_ECS_NETWORK_SOLUTION.md: 详细解决方案文档

部署就绪状态：
现在可以在阿里云ECS环境中成功构建和部署SSL证书管理器
所有网络连接问题已彻底解决，支持域名ssl.gzyggl.com部署

--- a/backend/Dockerfile.base
+++ b/backend/Dockerfile.base
@@ -13,6 +13,25 @@ ENV PYTHONUNBUFFERED=1 \
 # 设置工作目录
 WORKDIR /app
 
+# 配置阿里云Debian镜像源（解决网络连接问题）
+RUN echo "=== 配置阿里云Debian镜像源 ===" && \
+    # 备份原始sources.list（如果存在）
+    if [ -f /etc/apt/sources.list ]; then cp /etc/apt/sources.list /etc/apt/sources.list.backup; fi && \
+    # 检测Debian版本
+    DEBIAN_CODENAME=$(cat /etc/os-release | grep VERSION_CODENAME | cut -d= -f2 || echo "bookworm") && \
+    echo "检测到Debian版本: $DEBIAN_CODENAME" && \
+    # 配置阿里云镜像源
+    echo "# 阿里云Debian镜像源" > /etc/apt/sources.list && \
+    echo "deb https://mirrors.aliyun.com/debian/ $DEBIAN_CODENAME main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb-src https://mirrors.aliyun.com/debian/ $DEBIAN_CODENAME main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "" >> /etc/apt/sources.list && \
+    echo "deb https://mirrors.aliyun.com/debian-security/ $DEBIAN_CODENAME-security main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb-src https://mirrors.aliyun.com/debian-security/ $DEBIAN_CODENAME-security main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "" >> /etc/apt/sources.list && \
+    echo "deb https://mirrors.aliyun.com/debian/ $DEBIAN_CODENAME-updates main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "deb-src https://mirrors.aliyun.com/debian/ $DEBIAN_CODENAME-updates main non-free-firmware" >> /etc/apt/sources.list && \
+    echo "阿里云Debian镜像源配置完成"
+
 # 更新系统并安装必要的系统依赖
 RUN echo "=== 更新系统包 ===" && \
     apt-get update && \
@@ -24,13 +43,15 @@ RUN echo "=== 更新系统包 ===" && \
         libssl-dev \
         libffi-dev \
         libpq-dev \
+        ca-certificates \
         && \
     echo "=== 系统包安装完成 ==="
 
 # 配置阿里云pip镜像源
 RUN echo "=== 配置pip镜像源 ===" && \
-    pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple && \
-    pip config set global.trusted-host pypi.tuna.tsinghua.edu.cn && \
+    pip config set global.index-url https://mirrors.aliyun.com/pypi/simple/ && \
+    pip config set global.trusted-host mirrors.aliyun.com && \
+    pip config set global.timeout 60 && \
     pip config list && \
     echo "=== pip镜像源配置完成 ==="
 
