--- a/frontend/Dockerfile.base
+++ b/frontend/Dockerfile.base
@@ -6,6 +6,21 @@ FROM node:18-alpine
 # 设置工作目录
 WORKDIR /app
 
+# 配置阿里云Alpine镜像源（解决网络连接问题）
+RUN echo "=== 配置阿里云Alpine镜像源 ===" && \
+    # 备份原始配置
+    cp /etc/apk/repositories /etc/apk/repositories.backup && \
+    # 检测Alpine版本
+    ALPINE_VERSION=$(cat /etc/alpine-release | cut -d. -f1,2) && \
+    echo "检测到Alpine版本: $ALPINE_VERSION" && \
+    # 配置阿里云镜像源
+    echo "https://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/main" > /etc/apk/repositories && \
+    echo "https://mirrors.aliyun.com/alpine/v$ALPINE_VERSION/community" >> /etc/apk/repositories && \
+    echo "阿里云Alpine镜像源配置完成" && \
+    # 更新包索引
+    apk update && \
+    echo "包索引更新完成"
+
 # 配置阿里云npm镜像源和二进制文件镜像（使用环境变量方式）
 ENV ELECTRON_MIRROR=https://npmmirror.com/mirrors/electron/ \
     SASS_BINARY_SITE=https://npmmirror.com/mirrors/node-sass/ \
