修复PostgreSQL启动问题，完善数据库初始化
PostgreSQL问题修复：
- 创建database/init目录和数据库初始化脚本
- 修复docker-compose.aliyun.yml中缺失的数据库初始化目录问题
- 优化PostgreSQL健康检查配置，增加启动时间和重试次数

数据库初始化脚本：
- 01-init-database.sql: 完整的数据库表结构和初始数据
- 02-health-check.sql: 数据库健康检查和验证脚本
- 创建6个核心表：users, domains, ssl_certificates, certificate_requests, system_config, operation_logs
- 安装必要的PostgreSQL扩展：uuid-ossp, pgcrypto
- 创建默认管理员账户：admin / admin123
- 添加完整的索引和触发器

配置文件优化：
- 修复PostgreSQL健康检查配置，使用固定用户名避免变量问题
- 增加健康检查启动时间和重试次数
- 创建.env环境配置文件，包含所有必要的环境变量
- 创建fix-postgres.sh快速修复脚本

验证结果：
- PostgreSQL容器成功启动
- 数据库初始化脚本执行成功
- 创建了6个数据表和必要的扩展
- 数据库连接测试通过
- 健康检查功能正常

部署就绪：
现在PostgreSQL服务可以正常启动，用户可以成功运行：
docker-compose -f docker-compose.aliyun.yml --profile monitoring up -d

所有数据库相关问题已解决！

--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -47,10 +47,11 @@ services:
       ssl-manager-network:
         ipv4_address: 172.20.0.10
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-ssl_user} -d ${DB_NAME:-ssl_manager}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD-SHELL", "pg_isready -U ssl_user -d ssl_manager"]
+      interval: 15s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
     deploy:
       resources:
         limits:
