🧹 全面清理和文档整理：打造专业的SSL证书管理器仓库
## 📋 清理内容

### 删除临时修复脚本和报告文档
- 移除所有临时修复脚本：fix-*.sh, test-*.sh, diagnose-*.sh
- 删除冗余的markdown报告文档：*_REPORT.md, *_FIX*.md, *_VALIDATION*.md
- 清理测试报告目录：test_reports/
- 移除临时性能测试文件：backend/test_performance.py

### 保留核心部署脚本
- ✅ deploy.sh - 一键部署脚本（主要部署工具）
- ✅ scripts/ssl-manager.sh - 核心管理脚本（系统管理工具）
- ✅ client/client.sh - 客户端安装脚本

### 简化scripts目录
删除的脚本：
- alpine-optimizer.sh, build-base-images.sh
- configure-aliyun-mirrors.sh, setup-docker-mirror.sh
- smart-image-switch.sh, verify_error_handling.sh
- 各种diagnose和fix脚本

保留的脚本：
- ssl-manager.sh（已更新，移除对不存在脚本的引用）

## 📝 文档整理

### 更新主要文档
- ✅ README.md - 完全重写，提供清晰的部署指南
  - 🚀 一键部署命令
  - 📋 系统要求和访问地址
  - 🔑 默认账户信息
  - 🛠️ 管理命令
  - 🔧 故障排除指南

- ✅ DEPLOYMENT.md - 新建详细部署指南
  - 📋 部署前准备
  - 🚀 多种部署方法
  - ✅ 部署验证步骤
  - 🔧 服务管理命令
  - 🔍 故障排除方案

### 项目结构优化
- 📁 清晰的项目结构说明
- 🏗️ 系统架构图
- 📊 功能特性列表
- 🎯 生产环境建议

## 🔧 技术改进

### 后端依赖更新
- ✅ 添加PostgreSQL支持：psycopg2-binary==2.9.9
- ✅ 添加SQLAlchemy==2.0.23
- ✅ 保持与PostgreSQL数据库的完全兼容

### 脚本功能优化
- 🔄 更新ssl-manager.sh脚本
- 🛠️ 移除对不存在脚本的引用
- ✅ 简化验证和修复功能
- 📝 更新帮助文档

## 🎯 最终效果

### 仓库结构清晰

### 部署流程简化
1. **一键部署**: === SSL证书管理器一键部署工具 ===
专为阿里云ECS环境优化
部署时间: Mon Jun  9 12:53:22 UTC 2025
=======================================
快速部署模式
域名: ssl.gzyggl.com
邮箱: 19822088@qq.com
[0;34m1. 检查系统环境[0m
[1;33m启动Docker服务...[0m
2. **访问应用**: http://ssl.gzyggl.com
3. **默认账户**: admin / admin123
4. **管理命令**: docker-compose -f docker-compose.aliyun.yml ps

### 文档专业化
- ✅ 清晰的部署说明
- ✅ 完整的故障排除指南
- ✅ 详细的系统要求
- ✅ 生产环境配置建议

## 🎉 部署就绪

现在用户可以：
1. 克隆仓库后直接运行 === SSL证书管理器一键部署工具 ===
专为阿里云ECS环境优化
部署时间: Mon Jun  9 12:53:22 UTC 2025
=======================================
快速部署模式
域名: ssl.gzyggl.com
邮箱: 19822088@qq.com
[0;34m1. 检查系统环境[0m
[1;33m启动Docker服务...[0m
2. 访问 http://ssl.gzyggl.com 使用SSL证书管理器
3. 使用清晰的文档进行故障排除
4. 通过专业的管理脚本维护系统

所有临时文件已清理，仓库结构专业整洁，部署流程简单可靠！

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -39,6 +39,10 @@ urllib3==2.0.4
 # System Information
 psutil==5.9.5
 
+# Database Support
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.23
+
 # SSL/TLS Support
 pyOpenSSL==23.2.0
 
