fix: 修复PostgreSQL数据库版本兼容性问题和Docker资源限制配置
主要修复:
- 解决PostgreSQL服务持续重启失败问题
- 修复Docker环境中cgroup配置导致的资源限制问题
- 临时移除docker-compose.aliyun.yml中的资源限制配置
- 构建缺失的前端基础镜像ssl-manager-frontend-base:latest

验证结果:
✅ PostgreSQL 15.13数据库服务正常启动并通过健康检查
✅ Redis 7缓存服务正常启动并通过健康检查
✅ 数据库连接测试通过，表结构完整（7个表）
✅ Redis缓存连接测试通过
✅ 所有基础镜像构建成功
✅ 监控栈（Prometheus、Grafana）正常运行

技术细节:
- 问题根因：Docker环境cgroup配置导致资源限制失效，非PostgreSQL版本兼容性问题
- 解决方案：移除deploy.resources配置，允许容器正常启动
- 数据验证：PostgreSQL 15.13正常运行，数据库初始化完成
- 服务状态：核心数据库和缓存服务已可正常使用

注意事项:
- 已临时移除资源限制，生产环境需根据实际情况调整
- 前端Nginx权限配置需要后续优化（不影响核心功能）
- 建议在支持cgroup v2的环境中重新启用资源限制

--- a/docker-compose.aliyun.yml
+++ b/docker-compose.aliyun.yml
@@ -52,11 +52,12 @@ services:
       timeout: 10s
       retries: 10
       start_period: 30s
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-          cpus: '0.5'
+    # 临时移除资源限制以解决cgroup配置问题
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 1G
+    #       cpus: '0.5'
     logging:
       driver: "json-file"
       options:
@@ -81,11 +82,12 @@ services:
       interval: 10s
       timeout: 3s
       retries: 5
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.25'
+    # 临时移除资源限制以解决cgroup配置问题
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 512M
+    #       cpus: '0.25'
     logging:
       driver: "json-file"
       options:
@@ -154,11 +156,12 @@ services:
       timeout: 10s
       retries: 3
       start_period: 30s
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-          cpus: '0.5'
+    # 临时移除资源限制以解决cgroup配置问题
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 1G
+    #       cpus: '0.5'
     logging:
       driver: "json-file"
       options:
@@ -197,11 +200,12 @@ services:
       timeout: 3s
       retries: 3
       start_period: 5s
-    deploy:
-      resources:
-        limits:
-          memory: 256M
-          cpus: '0.25'
+    # 临时移除资源限制以解决cgroup配置问题
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 256M
+    #       cpus: '0.25'
     logging:
       driver: "json-file"
       options:
@@ -245,14 +249,15 @@ services:
       timeout: 3s
       retries: 3
       start_period: 10s
-    deploy:
-      resources:
-        limits:
-          memory: 256M
-          cpus: '0.25'
-        reservations:
-          memory: 128M
-          cpus: '0.1'
+    # 临时移除资源限制以解决cgroup配置问题
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 256M
+    #       cpus: '0.25'
+    #     reservations:
+    #       memory: 128M
+    #       cpus: '0.1'
     logging:
       driver: "json-file"
       options:
@@ -279,11 +284,12 @@ services:
     networks:
       ssl-manager-network:
         ipv4_address: 172.20.0.50
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.25'
+    # 临时移除资源限制以解决cgroup配置问题
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 512M
+    #       cpus: '0.25'
     profiles:
       - monitoring
 
@@ -311,10 +317,11 @@ services:
         ipv4_address: 172.20.0.51
     depends_on:
       - prometheus
-    deploy:
-      resources:
-        limits:
-          memory: 256M
-          cpus: '0.25'
+    # 临时移除资源限制以解决cgroup配置问题
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 256M
+    #       cpus: '0.25'
     profiles:
       - monitoring
