fix: 修复前端容器Nginx权限配置问题
主要修复:
- 解决前端容器Nginx权限错误和PID文件访问问题
- 修复nginx.conf配置，移除user指令，修改PID文件路径
- 优化Dockerfile权限设置，确保非root用户正常运行
- 创建启动脚本处理权限检查和目录创建

技术细节:
- 问题原因：Nginx以非root用户运行时无法写入/var/run/nginx.pid
- 解决方案：将PID文件路径改为/tmp/nginx.pid，确保写入权限
- 权限优化：正确设置/tmp目录权限，移除user指令冲突
- 启动脚本：添加目录检查和配置测试逻辑

验证结果:
✅ 前端容器启动成功，状态为healthy
✅ Nginx配置语法测试通过
✅ 健康检查端点/health响应正常(200)
✅ Web界面可正常访问(HTTP 200)
✅ 容器以非root用户安全运行

服务状态:
✅ PostgreSQL 15.13 - 正常运行
✅ Redis 7 - 正常运行
✅ 前端Web服务 - 正常运行
✅ Prometheus监控 - 正常运行
✅ Grafana可视化 - 正常运行

注意事项:
- 前端Nginx权限问题已完全解决
- 所有核心服务已可正常使用
- 后端服务存在nc命令缺失问题，不影响前端功能

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,8 +1,9 @@
 # nginx主配置文件
-user nginx-app;
+# 注释掉user指令，因为容器以非root用户运行
+# user nginx-app;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+pid /tmp/nginx.pid;
 
 # 优化worker连接数
 events {
